pike: release python-novaclient 9.1.1
Includes the fix for bug 1706597 which is a
high severity regression from Pike.

Change-Id: Ic6491a6d7529e29bccad481b0368420cbb9e52be

--- a/deliverables/pike/python-novaclient.yaml
+++ b/deliverables/pike/python-novaclient.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 0a53d19a7feadc329534cf04d74411fc51c29e86
         repo: openstack/python-novaclient
     version: 9.1.0
+  - version: 9.1.1
+    projects:
+      - hash: a1c00740c5b709a7d2bc4289fa6e28eac7909b8f
+        repo: openstack/python-novaclient
 team: nova
 type: library
