newton: release python-novaclient 6.0.2
This will be the final novaclient release for newton.

Change-Id: If5e460dc71d7ed60d146769134e697a99c0affdb

--- a/deliverables/newton/python-novaclient.yaml
+++ b/deliverables/newton/python-novaclient.yaml
@@ -85,3 +85,7 @@ releases:
         hash: 9c731d51e3d7417cd9ff006d884ba5e57d8bdea6
     highlights: >
         - Routine bug fixes.
+  - version: 6.0.2
+    projects:
+      - repo: openstack/python-novaclient
+        hash: 41aeb89cae68a0e2ce03a248226488d4ba2ea8af
