Add oslo releases for queens Sept 30, 2017
Change-Id: I5d2d902ceabdd955aabe3cae83020ca46f34c2bf

--- a/deliverables/queens/oslo.config.yaml
+++ b/deliverables/queens/oslo.config.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: e6749d3208cffd7693353385f92865d9ac737623
         repo: openstack/oslo.config
     version: 4.13.0
+  - projects:
+      - hash: 0cce0be52abddc670f8d7451f240481eaa9fe208
+        repo: openstack/oslo.config
+    version: 4.13.1
