--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 8c7a18fc55c78d97b9bd7781261fd7ae2b69dd36
         repo: openstack/oslo.context
     version: 2.19.0
+  - projects:
+      - hash: 936ce1aa54a1034f6c09e2baa588c96416322265
+        repo: openstack/oslo.context
+    version: 2.19.1
