--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 7b1a6c16bd5ddbb79cc5c8d343a77be1b13a5609
         repo: openstack/oslo.policy
     version: 1.28.0
+  - projects:
+      - hash: 70ba1beb3e3c93fafc147633360df838155a82a9
+        repo: openstack/oslo.policy
+    version: 1.28.1
