--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 780a027dfd32f92c8cda8d24d145c59a47def6b0
         repo: openstack/oslo.serialization
     version: 2.21.0
+  - projects:
+      - hash: cdb2f60d26e3b65b6370f87b2e9864045651c117
+        repo: openstack/oslo.serialization
+    version: 2.21.1
