--- a/deliverables/queens/oslosphinx.yaml
+++ b/deliverables/queens/oslosphinx.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 435f32cba2ae8029e8f45afea811e269b1a4c78f
         repo: openstack/oslosphinx
     version: 4.16.0
+  - projects:
+      - hash: eae6cb9cc716b6d2ce65ec1e0866c749fa125547
+        repo: openstack/oslosphinx
+    version: 4.17.0
