--- a/deliverables/queens/stevedore.yaml
+++ b/deliverables/queens/stevedore.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 97ecf51a6b3461917ca732a8695b62c41d29e20d
         repo: openstack/stevedore
     version: 1.27.0
+  - projects:
+      - hash: 6720cf7ed0b031e9e37c0f268a5a485688fe66ec
+        repo: openstack/stevedore
+    version: 1.27.1
