--- a/deliverables/ocata/horizon.yaml
+++ b/deliverables/ocata/horizon.yaml
@@ -45,3 +45,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: f87d87a2fa5836b11769ef5109767353200e01be
+  - version: 11.0.4
+    projects:
+      - repo: openstack/horizon
+        hash: 4892f35575bde78c612088a388fbf50c7f19f9e7
