--- a/deliverables/_independent/whereto.yaml
+++ b/deliverables/_independent/whereto.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/whereto
         hash: caaac8bc093f6c6860ec90e99ae4a7c4ecc2e423
+  - projects:
+      - hash: 5e8fd69c3b1feaf78655ff7af06ebb16804087d4
+        repo: openstack/whereto
+    version: 0.2.0
