--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -135,3 +135,7 @@ releases:
       - hash: ff2ca65e5c3b5ad2f2b60c2b367b5297854537f7
         repo: openstack/reno
     version: 2.5.0
+  - projects:
+      - hash: bbe3543f7855d8dab9ac2c445530d7a782bc1e6e
+        repo: openstack/reno
+    version: 2.5.1
