--- a/deliverables/newton/openstack-ansible.yaml
+++ b/deliverables/newton/openstack-ansible.yaml
@@ -1951,3 +1951,75 @@ releases:
         hash: 56ca566ef024603b2fbfd3d0b7af6d844e26884a
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 27e47df8ad22f01d0a8905ec35ff3bfa916dc89b
+  - version: 14.2.9
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 1d85ca12fa078880d38c14c2b396fa00cf38c877
+      - repo: openstack/ansible-hardening
+        hash: 31bfec7b28d60518a31fcc16a10904b701b4ba40
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: ea0e5cd10c0d96b50887de544f53d0bcc54949fc
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 1e43ca6bf6d6a36f56d2c3269fbba8075e13149c
+      - repo: openstack/openstack-ansible-galera_client
+        hash: b6f095a1f7ae109f43fd3264ab5371c010a81ba8
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 8bb346420d3d5d69fc37300fb47c7dcfb7534bc9
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 62ecbd9eb60fe8e3b676a267c2ae84b623fc8bd4
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 0ec4e0e490554dd5832c646426a3bfa8ef38be04
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 08ba32ab2c99878d87628494042bfadf6f67697b
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: dad3bd51306ac68fb622eae45bccf1e20a631f82
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 0afdcad49d6d08410f1f0227619e9a984a34570f
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: a8834b6806df2816e288e4c30349c643ec9e4750
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: 308497e1e005f4867010464f431ddd72b7a149b4
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: eafbe337bea94f32fe6fcef8149ec1c786cb8f01
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: ac0a498abb638300380cc769c527d2a195e13ca0
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: ee6257fa4f51ce23b57273f674b543236b658a42
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 480bc09f07089b92161a3b00654abb383ee16a7f
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 849f8df7d83ef23774485068103a6047d97a3635
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 4372bcfd590c9d8e245c35c9cfef8c3be6df073b
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 6054607dc1629cface1b2420fdd69f0fe1e18a50
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 36a1acb58e5b6328e309617e12948fb7a00b8166
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 8b1e8562f56f803dc18db58cb69e2cf83c86ec31
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 8acd8217ebdcdab664e0f4f6b5bd6ee0f62edca4
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: b15cc7f25f2afc6754db3b35c5a84c4cacb40f02
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 91677876e5cf5de7305437d4dcffe4263f0701c5
+      - repo: openstack/openstack-ansible-os_rally
+        hash: b6377aeeddb894ded8888966e574d8b0ea4c7022
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: aeb5cdc728eea8f8a63fd29443e0be911ea2e6c1
+      - repo: openstack/openstack-ansible-os_swift
+        hash: ff2c09642def9f4796c7e9441d5d85e876eb8b37
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 80c72fca423f4629c916efbe0e6a4f4a070b06a0
+      - repo: openstack/openstack-ansible-plugins
+        hash: d9669419bf63d92c7fd0702ee6ca48fab3ea0a0a
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: f2d110a1fae658edfc790d6d1a00cf481f51e9f2
+      - repo: openstack/openstack-ansible-repo_build
+        hash: aba8910567a5cdb364bbe2612a9f6f2382414274
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 90a77110090ab2c3314a9719daa8c1398ed1ca08
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 56ca566ef024603b2fbfd3d0b7af6d844e26884a
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 27e47df8ad22f01d0a8905ec35ff3bfa916dc89b
