Add Sahara project deadlines for Queens
As agreed upon at Denver PTG.

Change-Id: I7060c38b1f172a1aad9f3a2b465799081c240435

--- a/doc/source/queens/schedule.yaml
+++ b/doc/source/queens/schedule.yaml
@@ -72,6 +72,7 @@ cycle:
   - q-manila-driver-deadline
   - q-cinder-driver-deadline
   - q-cinder-spec-freeze
+  - q-sahara-plugin-deadline
 - end: '2017-12-15'
   name: R-11
   start: '2017-12-11'
