--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ console_scripts =
     make-tracking-pad = openstack_releases.cmds.make_tracking_pad:main
     propose-library-branches = openstack_releases.cmds.propose_library_branches:main
     edit-deliverable = openstack_releases.cmds.edit_deliverable:main
+    send-mail = openstack_releases.cmds.mail:main
 
 [extras]
 sphinxext =
