add release notes output to the list-changes job
Import the release-notes command from the release-tools repository and
integrate it with the list-changes command so that we see the release
notes for an upcoming release. This lets us review the release notes
output for warnings (like not having a documentation page linked) and
errors (such as reno failing to work).

Change-Id: I710606fe44601fe5414bfc82f25894319f16e558
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ console_scripts =
     propose-library-branches = openstack_releases.cmds.propose_library_branches:main
     edit-deliverable = openstack_releases.cmds.edit_deliverable:main
     send-mail = openstack_releases.cmds.mail:main
+    release-notes = openstack_releases.cmds.release_notes:main
 
 [extras]
 sphinxext =
