--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ tqdm
 packaging>=15.2
 mwclient==0.8.1
 jsonschema>=2.6.0
+
+# For release notes generation.
+Jinja2>=2.6  # BSD License (3 clause)
+parawrap
+reno>=2.0.0
+sphinx>=1.6.2  # BSD
