--- a/deliverables/_independent/renderspec.yaml
+++ b/deliverables/_independent/renderspec.yaml
@@ -43,3 +43,7 @@ releases:
     projects:
       - repo: openstack/renderspec
         hash: 2a0409abd6072aa9fb19869422d43652f4811f2b
+  - projects:
+      - hash: f646eea279f35d8c3e0f0533e6ee4e9e7ddd6699
+        repo: openstack/renderspec
+    version: 1.8.0
