--- a/deliverables/queens/cliff.yaml
+++ b/deliverables/queens/cliff.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: 8b77ece17ba32eb7ac1914418c86b5446a575673
+  - version: 2.9.1
+    projects:
+      - repo: openstack/cliff
+        hash: a9719bc23ea3ad90cbad9ab743e678f491e85f0a
