Create new releases for puppet-murano and puppet-nova
For puppet-murano if bug fix only
For puppet-nova it includes new config options and bug fixes

Change-Id: I305959eca5d2cac60ad8f3dff7bfb672197791b3

--- a/deliverables/pike/puppet-murano.yaml
+++ b/deliverables/pike/puppet-murano.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 4a48197467769bbebf093b2b7620955bc88106f1
         repo: openstack/puppet-murano
     version: 11.3.0
+  - projects:
+      - hash: af37d220d3868267700692fb1d45356a1457eba5
+        repo: openstack/puppet-murano
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
