--- a/deliverables/pike/puppet-nova.yaml
+++ b/deliverables/pike/puppet-nova.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 91edc2c2b14dff19ce948db71ea1404e24865990
         repo: openstack/puppet-nova
     version: 11.3.0
+  - projects:
+      - hash: a8fc794d6ca7b42051008acabb3d8d11678c6b08
+        repo: openstack/puppet-nova
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
