Create new releases of puppet-magnum for pike and ocata
They include "Fix magnum cluster TLS cert generation".

Change-Id: I0ab0849de1dbbf87294be334b0cc2cd80ce6879e

--- a/deliverables/ocata/puppet-magnum.yaml
+++ b/deliverables/ocata/puppet-magnum.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-magnum
         hash: cd82816e973b7f3b88f80500cf99d8adc987de84
+  - version: 10.4.0
+    projects:
+      - repo: openstack/puppet-magnum
+        hash: 7d143338d5f0902b3a458eaeb4d6c434fb8925f9
