--- a/deliverables/pike/puppet-magnum.yaml
+++ b/deliverables/pike/puppet-magnum.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: f8dd9a0f4e738bf92e0602285c7a73cb50473044
         repo: openstack/puppet-magnum
     version: 11.3.0
+  - projects:
+      - hash: 0112f1b96f5d377fbc797d2c54fc37958f8ca21d
+        repo: openstack/puppet-magnum
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
