--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -3,3 +3,8 @@ launchpad: tripleo-common
 release-model: cycle-trailing
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 7fc6436d05cfde167d1acdb8e88646f22841ced7
+        repo: openstack/tripleo-common
+    version: 8.0.0
