New feature renderspec release
Change-Id: I7bb5a149b4cba20a1ffd0c0a0b92a76d6761f3b5

--- a/deliverables/_independent/renderspec.yaml
+++ b/deliverables/_independent/renderspec.yaml
@@ -47,3 +47,7 @@ releases:
       - hash: f646eea279f35d8c3e0f0533e6ee4e9e7ddd6699
         repo: openstack/renderspec
     version: 1.8.0
+  - projects:
+      - hash: 2d0afbf1cf8ccbb8f494bffd919a5a945d850123
+        repo: openstack/renderspec
+    version: 1.9.0
