Add oslo.serialization release for stable/newton
Change-Id: I12ec33e90e18b140e8cc162de0555cc5831340b7

--- a/deliverables/newton/oslo.serialization.yaml
+++ b/deliverables/newton/oslo.serialization.yaml
@@ -54,3 +54,7 @@ releases:
     projects:
       - repo: openstack/oslo.serialization
         hash: be02fdbebc2d9f92a959aa34e0cb5a30934dfa0d
+  - projects:
+      - hash: e85a6706ae8a0e607e87028110170daa5043f237
+        repo: openstack/oslo.serialization
+    version: 2.13.2
