Final newton release of Octavia and neutron-lbaas
Release neutron-lbaas 9.2.2 and octavia 0.9.2 as the final stable/newton
release to include backported fixes not previously released.

Change-Id: Idff05c52edcd155398a6c3b88698cf8758cc626e

--- a/deliverables/newton/octavia.yaml
+++ b/deliverables/newton/octavia.yaml
@@ -28,3 +28,7 @@ releases:
         hash: 414b4ac80aa7e8e35d70c79411900e80778a2f3e
     highlights: |-
       * Resolves issues building and using amphora images
+  - version: 0.9.2
+    projects:
+      - repo: openstack/octavia
+        hash: a74008c9a4c166cf9c87a445d0c8bab49fe1badb
