--- a/deliverables/_independent/renderspec.yaml
+++ b/deliverables/_independent/renderspec.yaml
@@ -51,3 +51,7 @@ releases:
       - hash: 2d0afbf1cf8ccbb8f494bffd919a5a945d850123
         repo: openstack/renderspec
     version: 1.9.0
+  - projects:
+      - hash: eb3ea1008b25456efee4beeaf2bf575a2d14d802
+        repo: openstack/renderspec
+    version: 1.9.1
