TripleO Ocata release
Change-Id: I9b744782ccddaaa6f19a97d7c1ff80938529253d

--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -38,5 +38,9 @@ releases:
       - hash: 3ecd35c4b9edbb0780e2dc43a0c6633d69f55286
         repo: openstack/puppet-tripleo
     version: 6.5.2
+  - projects:
+      - hash: 0c3e97a5ae138a1f9a343be81b3c54bf5ed4daba
+        repo: openstack/puppet-tripleo
+    version: 6.5.3
 team: tripleo
 type: other
