--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: 715738eac8ed0301ddc7e1c60e6d00c283f01e63
         repo: openstack/tripleo-heat-templates
     version: 6.2.2
+  - projects:
+      - hash: c905682b23da52e01c2ed8eb23182d0a961ceea1
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.3
 team: tripleo
 type: other
