--- a/deliverables/ocata/tripleo-puppet-elements.yaml
+++ b/deliverables/ocata/tripleo-puppet-elements.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: 95348c9c0cb337507cc8bb836009d8895eef141d
         repo: openstack/tripleo-puppet-elements
     version: 6.2.2
+  - projects:
+      - hash: 1eeaf432b7be2571ac53330c45d96f68ffae5a5d
+        repo: openstack/tripleo-puppet-elements
+    version: 6.2.3
 team: tripleo
 type: other
