TripleO Pike release
Change-Id: I6e1e5b9ca3b07467838e4e279290c3d3a31f8af1

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -33,5 +33,9 @@ releases:
       - hash: c97752b9944e53dd439724412d5dd8d5afa45564
         repo: openstack/instack-undercloud
     version: 7.4.1
+  - projects:
+      - hash: 0c364056ddc634986af315e05227da87046aad39
+        repo: openstack/instack-undercloud
+    version: 7.4.2
 team: tripleo
 type: other
