--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -25,5 +25,9 @@ releases:
       - hash: 77fe5922bd7ca5c2a199d383b03537c08edfcc1c
         repo: openstack/os-net-config
     version: 7.3.0
+  - projects:
+      - hash: 9ce34d529d7faa65cfa6f88aaecf735f92c4c89b
+        repo: openstack/os-net-config
+    version: 7.3.1
 team: tripleo
 type: other
