--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -29,5 +29,9 @@ releases:
       - hash: bc3dfc5ac3488ad5411ba4b3856dcf0ff1542692
         repo: openstack/puppet-tripleo
     version: 7.4.1
+  - projects:
+      - hash: cb32fd0ab470e5aa1d01d4ab93979be4d5af6afb
+        repo: openstack/puppet-tripleo
+    version: 7.4.2
 team: tripleo
 type: other
