--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 1023935291d18a0e8389f41da7b6b86911ac27bf
         repo: openstack/python-tripleoclient
     version: 7.3.1
+  - projects:
+      - hash: 456a1f3478cf5f2e99ec44104a07645d9b04524e
+        repo: openstack/python-tripleoclient
+    version: 7.3.2
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
