--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -41,5 +41,9 @@ releases:
       - hash: f30cc7a5e71adee77bb7ab8769798342462671b2
         repo: openstack/tripleo-common
     version: 7.6.1
+  - projects:
+      - hash: 5922c80705c455d3d1d5dcb085ec08b19dd7accd
+        repo: openstack/tripleo-common
+    version: 7.6.2
 team: tripleo
 type: other
