--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: afbe64a2dae79c9d4344f55a54e8c953f680e3e1
         repo: openstack/tripleo-heat-templates
     version: 7.0.1
+  - projects:
+      - hash: 94e8238d6b61811d705b653ffb36d1aea624d015
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.2
 team: tripleo
 type: other
