--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -29,5 +29,9 @@ releases:
       - hash: 2bb5965b9e3f28c1f09ee1b2db8052c86dd4e1f4
         repo: openstack/tripleo-ui
     version: 7.4.1
+  - projects:
+      - hash: 627a7dd6323eeea2528efcf9d57510c4e57dac14
+        repo: openstack/tripleo-ui
+    version: 7.4.2
 team: tripleo
 type: other
