--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -25,5 +25,9 @@ releases:
       - hash: efe8a7251fc0737ea76faceef229a7ce934a8f60
         repo: openstack/tripleo-validations
     version: 7.4.0
+  - projects:
+      - hash: 2e43f1a7f37ad1adc072aa8bc5400ac4a616bbc7
+        repo: openstack/tripleo-validations
+    version: 7.4.1
 team: tripleo
 type: other
