TripleO Newton release
Change-Id: I77acf244527dd00133b7ed57639a910b9978cc97

--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -45,5 +45,9 @@ releases:
       - hash: de872dd3dec645b853d86f0a8e6751efd1ae3b0d
         repo: openstack/tripleo-common
     version: 5.4.3
+  - projects:
+      - hash: f62e8f966d89e1be3825a9fd6d23a02a52981a0e
+        repo: openstack/tripleo-common
+    version: 5.4.4
 team: tripleo
 type: library
