--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -57,5 +57,9 @@ releases:
       - hash: 68387265325594d12b6404f86297ba147a115be0
         repo: openstack/puppet-tripleo
     version: 5.6.3
+  - projects:
+      - hash: 301a4f366f3a2ab3d970cba68ca0d7a474c5ec34
+        repo: openstack/puppet-tripleo
+    version: 5.6.4
 team: tripleo
 type: other
