--- a/deliverables/ocata/magnum.yaml
+++ b/deliverables/ocata/magnum.yaml
@@ -27,3 +27,7 @@ releases:
     projects:
       - repo: openstack/magnum
         hash: b410770989fb53fed170a1fa503fe8ba176a5e6d
+  - projects:
+      - hash: a6d9f8950cfd91e5856a047061ac8057b7e257f3
+        repo: openstack/magnum
+    version: 4.1.4
