--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -580,3 +580,85 @@ releases:
         hash: deae241495122d6c9b8602c7a201b604ef604086
       - repo: openstack/openstack-ansible-os_molteniron
         hash: 9c9612a71e0166eef56105e8da34fa3564c7891e
+  - version: 16.0.2
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: ebe2bc8734845b44c17819c04f2322a2ca7152db
+      - repo: openstack/ansible-hardening
+        hash: 04a6e107db7b053031fce004ab026d1a4f280f6f
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: e5034411a1e4502e633a000cd1bfe02566bf8712
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 8a36480bfa895ed9b19b568c3415af1a97460181
+      - repo: openstack/openstack-ansible-galera_client
+        hash: 6ad4ddd4cf9ac00864b03da596786b3954ab4205
+      - repo: openstack/openstack-ansible-galera_server
+        hash: a347e4d1c78e5fcd3f02a6933db6a1b3b589cece
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: efa64c01fda6f857daef659b82e0dd9e3adaa9ca
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 6ff6aa69891ff510ab08920343bff863ec8e2886
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 90eb235119d4d9253f70741dc1463477a8837bb4
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: e52fb31f6a6b6e64045d3478e821dd0535c97b97
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 72d548135f6c438c7fbb7b28e229cccf3c8488fe
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 963937e326695c6274c6b70a77d622dc5de44203
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: e8bdbd9699e7c26de7f5504e622d6fce424b5806
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: 52ad978a58a06b98a116c9f5e38b5da0af775886
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: 4cd19b102c9d86cbf11e7a513ad2a7a0e0c427b7
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: d16e85f3355addf2c77df12a323815c96f25ae97
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 4d3c565d5cb7e047363b77e10b4ce65e82238473
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: b3f53ea50e35e7c8821329ca926ae5413621eb3f
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 61019976f351e5a63f840f93955e309496581ccc
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: b6647a15740d7ca105b8907fef6d4d5eca042f75
+      - repo: openstack/openstack-ansible-os_heat
+        hash: d7632670171b8dbb3dc84e21a04bef2252ca5044
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 2ff8d91aecba626cca843e43ec97f0d644ebed64
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: b1b50a05d808705d5a42a163fd7d195ee19c7b2e
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 57d2552d564754eeae792be6cdf45ff345c6d0b1
+      - repo: openstack/openstack-ansible-os_trove
+        hash: a34541fca18fb7b48e2a67dfaa8ea8c067e3b1b7
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: dd658f95a5ee23721d908d2ae13757d20b5882ea
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 2fbb2159df98e9cffd38ca619d30a341043e7711
+      - repo: openstack/openstack-ansible-os_rally
+        hash: e57e9c23f0376a6034e642ba1d97cc301f4da644
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 77d49b653a3cecf7c59f7c6322b8cc925d20709f
+      - repo: openstack/openstack-ansible-os_swift
+        hash: d4ae912b5a07178a74964a25a070bbe374088612
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 81e4153aa527f7145acb3bce496ead049a528933
+      - repo: openstack/openstack-ansible-plugins
+        hash: bc8fa680b60b208b98c8be37eaa2a4a1f9c5a829
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: e148ca4fe34504c4d298ba5fe354ff96248caf0d
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 373d710935466e0d73a5e34119d587169cd00f91
+      - repo: openstack/openstack-ansible-repo_server
+        hash: f4731abfb090b7e730bd728a3f7751c791ae9f86
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: a78e428e5d550c383bb0d1970c48c634beba4c06
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 0645a9071a2081bc23b9cbe73904385c8b0a09d3
+      - repo: openstack/openstack-ansible-os_designate
+        hash: 56cf5e273fe6241482e840fc75c9d5e9adc228ee
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: deae241495122d6c9b8602c7a201b604ef604086
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: 9c9612a71e0166eef56105e8da34fa3564c7891e
