pass $HOME to tox commands so git can find its config file
list-changes now needs to be able to add a temporary tag to build the
release notes. Adding the tag requires identity information not previously
required for other git commands, and git needs to know where HOME is to
find that info.

Change-Id: Ia9a506bdfa30cf72b48d53a7ec05b0bc939f34a6
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ skipdist = True
 
 [testenv]
 usedevelop=True
-passenv=ZUUL_CACHE_DIR
+passenv=
+  ZUUL_CACHE_DIR
+  HOME
 install_command = pip install -U {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
