New Pike releases for vitrage and python-vitrageclient
Change-Id: I1599a371dae7c27e87ba5b64f90e0263ab4d6f66

--- a/deliverables/pike/python-vitrageclient.yaml
+++ b/deliverables/pike/python-vitrageclient.yaml
@@ -15,5 +15,9 @@ releases:
       - hash: 8560fc5f5197964e17534d7bd08e9f9503dbb6f9
         repo: openstack/python-vitrageclient
     version: 1.3.0
+  - projects:
+      - hash: ecd7e47a8cc549713579125a4e0ab799ba95af62
+        repo: openstack/python-vitrageclient
+    version: 1.4.0
 team: vitrage
 type: library
