Add nova spec freeze date to queens schedule
Change-Id: Ia30f4ac3bdd310d31e4939053098ef16f6c4ecb1

--- a/doc/source/queens/schedule.yaml
+++ b/doc/source/queens/schedule.yaml
@@ -42,6 +42,7 @@ cycle:
   - q-1
   project-specific:
   - q-manila-spec-freeze
+  - q-nova-spec-freeze
 - end: '2017-10-27'
   name: R-18
   start: '2017-10-23'
