add warning to requirements list about updating bindep
Change-Id: I038ad88502bafb38aea984ec53d6cae2b8d1a125
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+######################################################################
+#                                                                    #
+#                          ** IMPORTANT **                           #
+#                                                                    #
+# THIS FILE IS ONLY USED BY TOX IN THE CHECK AND GATE JOBS. YOU MUST #
+# UPDATE bindep.txt TO INCLUDE ADDITIONAL PACKAGES NEEDED IN THE     #
+# POST-MERGE # JOBS SUCH AS "tag-releases".                          #
+#                                                                    #
+######################################################################
+
 pbr>=1.6
 
 # NOTE(dhellmann): We pin keyring because new releases tend to add
