--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 7fc6436d05cfde167d1acdb8e88646f22841ced7
         repo: openstack/tripleo-common
     version: 8.0.0
+  - projects:
+      - hash: 89804e9b30fee4bd884107ce66178295011d8bb5
+        repo: openstack/tripleo-common
+    version: 8.1.0
