--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 27193e01a42aa00c2058d49c6ae7cf9cdd659aa7
+        repo: openstack/tripleo-validations
+    version: 8.0.0
