--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 3fe99d45a844fab5a2f5b938753b70a0d8f01e45
+        repo: openstack/instack-undercloud
+    version: 8.0.0
