--- a/deliverables/queens/os-collect-config.yaml
+++ b/deliverables/queens/os-collect-config.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: os-collect-config
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: f7f49448a5a0c54ac4dbf56b8809ee1f365e038f
+        repo: openstack/os-collect-config
+    version: 8.0.0
