--- a/deliverables/queens/os-refresh-config.yaml
+++ b/deliverables/queens/os-refresh-config.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: os-refresh-config
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 1c38f870605c65cbc61d718266ed0798d9a479ba
+        repo: openstack/os-refresh-config
+    version: 8.0.0
