--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: paunch
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: bc1ea3c5e508203ca0a7b255596b684eb303cc43
+        repo: openstack/paunch
+    version: 2.0.0
