--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-tripleo
 release-model: cycle-trailing
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 50de2dafa328771332d1e28218dc4e4786cfca77
+        repo: openstack/puppet-tripleo
+    version: 8.0.0
