--- a/deliverables/queens/tripleo-image-elements.yaml
+++ b/deliverables/queens/tripleo-image-elements.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: e3c4777df9fe9189d4b72b298244edee112e7b03
+        repo: openstack/tripleo-image-elements
+    version: 8.0.0.0b1
