--- a/deliverables/queens/tripleo-puppet-elements.yaml
+++ b/deliverables/queens/tripleo-puppet-elements.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 77010c80de01f270134d14aad03ded1ae12e7112
+        repo: openstack/tripleo-puppet-elements
+    version: 8.0.0.0b1
