newton: release nova 14.0.9
This will be the final release for nova in the newton series.

Change-Id: I0b5a55aaf1028a9a03f2d43e68a935fbea301dc7

--- a/deliverables/newton/nova.yaml
+++ b/deliverables/newton/nova.yaml
@@ -93,3 +93,7 @@ releases:
         hash: bcc88d4cad3d2a86e9e1c841a4afdb5a9d87c0f1
     highlights: >
       - Bug fixes.
+  - version: 14.0.9
+    projects:
+      - repo: openstack/nova
+        hash: ca03fe87371d8c13fc2895f8ff3e7e1ca88cfe79
