Octavia projects Queens MS1 release
Change-Id: If8007a1453c399dd55602ec09c61f7f97948a9ec

--- a/deliverables/queens/neutron-lbaas-dashboard.yaml
+++ b/deliverables/queens/neutron-lbaas-dashboard.yaml
@@ -5,3 +5,8 @@ release-model: cycle-with-milestones
 release-type: horizon
 team: octavia
 type: horizon-plugin
+releases:
+  - version: 4.0.0.0b1
+    projects:
+      - repo: openstack/neutron-lbaas-dashboard
+        hash: 6895af770777c110ce165b86f820d5e4b1afe613
