--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -5,3 +5,8 @@ release-model: cycle-with-milestones
 release-type: horizon
 team: octavia
 type: horizon-plugin
+releases:
+  - version: 1.0.0.0b1
+    projects:
+      - repo: openstack/octavia-dashboard
+        hash: 0d6688e423bc50322661a2704d2a3cdaf1673658
