Cinder Queens Milestone 1 Release
This proposes Cinder 12.0.0.0b1 which is
the Queens Milestone 1 release.

Change-Id: I03ab9c9cd32e0f7fdcfcac7bad4932bffe05e6c5

--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -3,3 +3,8 @@ launchpad: cinder
 release-model: cycle-with-milestones
 team: cinder
 type: service
+releases:
+  - version: 12.0.0.0b1
+    projects:
+      - hash: 6f5c4c2b682561df07753c9381d0340b29468001
+        repo: openstack/cinder
