request Congress queens-1 release
Change-Id: I99d2b9a600c10a1839a1a6cccced7f9597097c43

--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -3,3 +3,10 @@ launchpad: congress
 release-model: cycle-with-milestones
 team: congress
 type: service
+releases:
+  - version: 7.0.0.0b1
+    projects:
+      - repo: openstack/congress
+        hash: a729a0926dcf3d5fcb8ee5640ea0bb5dec85e1a7
+    highlights: |-
+      - Neutron QoS extension driver added.
