--- a/deliverables/pike/mistral-lib.yaml
+++ b/deliverables/pike/mistral-lib.yaml
@@ -17,6 +17,10 @@ releases:
     projects:
       - repo: openstack/mistral-lib
         hash: 9c2d6d922a771449002b4ad76cbccd56c0aada86
+  - version: 0.3.1
+    projects:
+      - repo: openstack/mistral-lib
+        hash: b5e6b22ba9d1b77bf35babc39c6a49db80761117
 branches:
   - name: stable/pike
     location: 0.3.0
