--- a/deliverables/queens/watcher-dashboard.yaml
+++ b/deliverables/queens/watcher-dashboard.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: watcher-dashboard
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: watcher
 type: horizon-plugin
+releases:
+  - version: 1.5.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: e0ef3f01c213341e128b1dea05947561882f88f0
