nova: release queens 17.0.0.0b1
This is the q-1 milestone release for nova.

Change-Id: Ieeb5be0bdd7a4d9b6ededd8bd2b7d92d53df45b8

--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -3,3 +3,9 @@ launchpad: nova
 release-model: cycle-with-milestones
 team: nova
 type: service
+release-notes: https://docs.openstack.org/releasenotes/nova/unreleased.html
+releases:
+  - version: 17.0.0.0b1
+    projects:
+      - repo: openstack/nova
+        hash: af4703cb38580a8cb9c9b293dd4b1637f2734cad
